<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/home_title_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">
        <LinearLayout
            android:onClick="onExit"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/menu_text_font_size"
                android:text="@string/ap_xml_left_menu"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>


        <TextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/title_text_font_size"
            android:text="@string/ap_xml_title"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:onClick="onSwitchWifi"
            android:textSize="@dimen/menu_text_font_size"
            android:text="@string/ap_xml_right_menu"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/ap_xml_wifi_account_textview_msg"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/wifi_ssid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:gravity="right|center_vertical"
                android:hint="@string/ap_xml_wifi_account_edittext_hiht_msg"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#c9c9c9"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/ap_xml_wifi_password_textview_msg"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/wifi_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffffff"
                android:gravity="right|center_vertical"
                android:hint="@string/ap_xml_wifi_password_edittext_hiht_msg"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ap_xml_device_status_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/button_state"
            android:layout_gravity="center_horizontal"
            android:text="@string/ap_xml_device_lamp_on_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/next_"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:text="@string/ap_xml_next_msg"
            android:onClick="onNext"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</LinearLayout>