<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/home_title_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">
        <LinearLayout
            android:onClick="onExit"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/menu_text_font_size"
                android:text="@string/bind_xml_left_menu"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/title_text_font_size"
            android:text="@string/bind_xml_title"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:onClick="onSwitchWifi"
            android:textSize="@dimen/menu_text_font_size"
            android:text="@string/ap_xml_right_menu"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ScrollView
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--设备信息 -->
        <LinearLayout
            android:id="@+id/device_info_layout"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:textSize="14sp"
                    android:text="@string/bind_xml_device_sn_text_msg"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/devide_devid"
                    android:gravity="right|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/bind_xml_device_sn_hiht_msg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#aaaaaa"
                android:layout_width="match_parent"
                android:layout_height="1px"></View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:textSize="14sp"
                    android:text="@string/bind_xml_device_cstname_text_msg"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/devide_cstname"
                    android:gravity="right|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/bind_xml_device_cstname_hiht_msg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#aaaaaa"
                android:layout_width="match_parent"
                android:layout_height="1px"></View>
        </LinearLayout>


        <!--ap信息 -->
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:textSize="14sp"
                    android:text="@string/ap_xml_wifi_account_textview_msg"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/wifi_ssid"
                    android:gravity="right|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/ap_xml_wifi_account_edittext_hiht_msg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#aaaaaa"
                android:layout_width="match_parent"
                android:layout_height="1px"></View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:textSize="14sp"
                    android:text="@string/ap_xml_wifi_password_textview_msg"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/wifi_password"
                    android:gravity="right|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/ap_xml_wifi_password_edittext_hiht_msg"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#aaaaaa"
                android:layout_width="match_parent"
                android:layout_height="1px"></View>

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ap_xml_device_status_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/lamp_box"
                android:layout_gravity="center_horizontal"
                android:text="@string/ap_xml_device_lamp_on_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/next_"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="#aaaaaa"
            android:background="@drawable/button_unavailable_background"
            android:text="@string/ap_xml_next_msg"
            android:onClick="onNext"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>